--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "release": "semantic-release"
   },
   "dependencies": {
+    "@nestjs/class-validator": "^0.13.4",
     "chalk": "4.1.2",
     "class-transformer": "0.4.0",
-    "class-validator": "0.13.2",
     "debug": "4.3.3",
     "lodash.frompairs": "4.0.1",
     "lodash.merge": "4.6.2",
